@@ -1,4 +1,4 @@
-version = "0.9.9"
+version = "0.9.9-pre"
 dbVersion = "1"
 
 if __name__ == "__main__":
